// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkDatepicker "readOnly" can be overriden in "inputProps" 1`] = `
<DocumentFragment>
  <div
    class="bpk-datepicker__input"
  >
    <input
      aria-atomic="true"
      aria-invalid="false"
      aria-label="Monday, 15th February 2010"
      aria-live="assertive"
      class="bpk-input bpk-input--large bpk-input--with-open-events"
      id="myDatepicker"
      name="myDatepicker_input"
      placeholder="placeholder"
      type="text"
      value="15/02/2010"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDatepicker should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-datepicker__input"
  >
    <input
      aria-atomic="true"
      aria-invalid="false"
      aria-label="Monday, 15th February 2010"
      aria-live="assertive"
      class="bpk-input bpk-input--large bpk-input--with-open-events"
      id="myDatepicker"
      name="myDatepicker_input"
      placeholder="placeholder"
      type="text"
      value="15/02/2010"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDatepicker should render correctly when not valid 1`] = `
<DocumentFragment>
  <div
    class="bpk-datepicker__input"
  >
    <input
      aria-atomic="true"
      aria-invalid="true"
      aria-label="Monday, 15th February 2010"
      aria-live="assertive"
      class="bpk-input bpk-input--invalid bpk-input--large bpk-input--with-open-events"
      id="myDatepicker"
      name="myDatepicker_input"
      placeholder="placeholder"
      type="text"
      value="15/02/2010"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkDatepicker should render range correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-datepicker__input"
  >
    <input
      aria-atomic="true"
      aria-invalid="false"
      aria-label="Monday, 15th February 2010 - Saturday, 20th February 2010"
      aria-live="assertive"
      class="bpk-input bpk-input--large bpk-input--with-open-events"
      id="myDatepicker"
      name="myDatepicker_input"
      placeholder="placeholder"
      type="text"
      value="15/02/2010 - 20/02/2010"
    />
  </div>
</DocumentFragment>
`;
